<resources>
    <string name="app_name">News App</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Main Screen -->
    <string name="title_home">Home</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_account">Account</string>
    <string name="cd_home">Content List</string>
    <string name="cd_favorite">Bookmarked News</string>
    <string name="cd_account">User Profile</string>
</resources>
